# vterm

./: .gitignore  .gitmodules  README.md  default_vterm.conf  meson.build  meson_options.txt  notebook.css  notebook_style.css  todo.md
src/: common.h  v_config.h  v_keybindings.h  v_mode.cc  v_tab.cc  v_tab.h  v_term.cc  v_term.h
